# tljh-repo2docker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  eslint.config.js  jupyterhub_config.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml  test.yml
example/: DEPLOYMENT.md  Dockerfile
example/tljh_r2d/: Chart.yaml  jupyterhub_config_binderhub.py  jupyterhub_config_local.py  values.yaml
example/tljh_r2d/templates/: svc.yaml
frontend/: package.json  webpack.config.js
frontend/src/common/: ButtonWithConfirm.tsx  theme.ts
frontend/src/environments/: App.tsx  EnvironmentList.tsx  main.tsx
frontend/src/servers/: App.tsx  OpenServerButton.tsx  RemoveServerButton.tsx  types.ts
frontend/ui-tests/: playwright.config.js
scripts/: update-example-dockerfile.sh
src/common/: AxiosContext.tsx  ButtonWithConfirm.tsx  JupyterhubContext.ts  LoadingAnimation.tsx  SmallTextField.tsx  axiosclient.ts  style.css  theme.ts  utils.ts
src/environments/: App.tsx  EnvironmentList.tsx  LogDialog.tsx  NewEnvironmentDialog.tsx  RebuildEnvironmentButton.tsx  RemoveEnvironmentButton.tsx  main.tsx  types.ts
src/servers/: App.tsx  NewServerDialog.tsx  OpenServerButton.tsx  RemoveServerButton.tsx  ServersList.tsx  main.tsx  types.ts
src/spawn/: ImageTable.tsx  main.tsx
tests/: conftest.py  test_builder.py  test_images.py  test_logs.py  utils.py
tljh_repo2docker/: __init__.py  __main__.py  app.py  base.py  binderhub_builder.py  binderhub_log.py  builder.py  dbutil.py  docker.py  environments.py  executor.py  images.py  logs.py  model.py  servers.py  servers_api.py
tljh_repo2docker/alembic/: env.py
tljh_repo2docker/alembic/versions/: ac1b4e7e52f3_first_migration.py
tljh_repo2docker/database/: manager.py  model.py  schemas.py
tljh_repo2docker/static/css/: style.css
tljh_repo2docker/static/js/: images.js
tljh_repo2docker/templates/: admin.html  images.html  page.html  servers.html
tljh_repo2docker/tests/: conftest.py  test_builder.py  test_images.py  test_logs.py  utils.py
tljh_repo2docker/tests/binderhub_build/: conftest.py  test_builder.py  test_images.py  test_logs.py
tljh_repo2docker/tests/local_build/: conftest.py  test_builder.py  test_db_manager.py  test_docker.py  test_images.py  test_logs.py
ui-tests/: binderhub_config.py  jupyterhub_config.py  jupyterhub_config_binderhub.py  jupyterhub_config_local.py  package-lock.json  package.json  playwright.config.js  tljh_repo2docker_binderhub.py  tljh_repo2docker_config.py
ui-tests/tests/: ui.test.ts
